Search API Solr Search 1.x, dev (xx/xx/xxxx):
---------------------------------------------
- #2532812 by drunken monkey: Improved performance for filter-only queries.
- #2463523 by bmunslow: Fixed field boosts in multi-index searches.

Search API Solr Search 1.8 (2015-06-15):
----------------------------------------
- #2502511 by drunken monkey: Fixed index removal on Solr 5.
- #2441117 by drunken monkey: Fixed unnecessary reindexing after changing
  fields' boosts.

Search API Solr Search 1.7 (2015-06-08):
----------------------------------------
- #2466489 by drunken monkey: Changed installation instructions to point to the
  handbook.
- #2486533 by drunken monkey: Fixed default operator in Solr 5.
- #2456159 by drunken monkey: Updated config files to their latest version from
  the common configs.
- #2442077 by drunken monkey, basvredeling: Added support for Solr 5.
- #2451037 by drunken monkey: Fixed timeout errors during indexing.
- #2054551 by paolomainardi, drunken monkey, lex0r: Added possibility to
  retrieve Solr field values in multi-index searches.
- #1908990 by drunken monkey: Fixed various issues with excerpts.
- #2368399 by das-peter, drunken monkey: Added Support for location filtering
  with a bounding box.
- #2333133 by drunken monkey: Fixed behavior of filters on fulltext fields.

Search API Solr Search 1.6 (2014-09-08):
----------------------------------------
- #2050961 by das-peter, drunken monkey: Added proximity/distance information
  to search results.
- #2242073 by RaF: Fixed handling of custom negative filters in filter-only
  searches.
- #2290601 by drunken monkey: Fixed handling of complex keywords and OR facets.
- #2083357 by drunken monkey: Added note that Solr 4.x server paths should be
  specified with core.
- #2270767 by RaF: Fixed search_api_solr_views_data_alter() not always
  returning all virtual fields.

Search API Solr Search 1.5 (2014-05-23):
----------------------------------------